--- a/fastube/fastube/templates/base.html
+++ b/fastube/fastube/templates/base.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+{% load staticfiles %}<!DOCTYPE html>
 <html lang="ko-KR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static "css/application.css" %}">
+    <link rel="stylesheet" href="{% static "css/partials/header.css" %}">
+    <link rel="stylesheet" href="{% static "css/partials/footer.css" %}">
     <title>{% block title%}{% endblock %}</title>
 </head>
 <body>
