--- a/fastube/users/templates/users/signup.html
+++ b/fastube/users/templates/users/signup.html
@@ -4,4 +4,12 @@
 
 {% block content %}
 <h1>Signup</h1>
+<form action="{% url "auth:signup" %}" method="POST">
+    {% csrf_token %}
+    <input type="text" name="username" placeholder="name" required>
+    <input type="password" name="password" placeholder="password" required>
+    <input type="email" name="email" placeholder="hjh5488@gmail.com" required>
+    <input type="text" name="phonenumber" placeholder="010-9979-5385" required>
+    <input type="submit" value-"Signup">
+</form>
 {% endblock %}
