--- a/fastube/fastube/templates/partials/header.html
+++ b/fastube/fastube/templates/partials/header.html
@@ -1,6 +1,11 @@
 <header>
     <h1>Header</h1>
     <ul>
-        <li><a href="{% url "auth:signup" %}">Signup</a></li>
+        {% if request.user.is_authenticated %}
+            <li>Hi {{ request.user.username }}</li>
+        {% else %}
+            <li><a href="{% url "auth:login" %}">Login</a></li>
+            <li><a href="{% url "auth:signup" %}">Signup</a></li>
+        {% endif %}
     </ul>    
 </header>
