--- a/fastube/fastube/templates/partials/header.html
+++ b/fastube/fastube/templates/partials/header.html
@@ -3,10 +3,10 @@
     <ul>
         {% if request.user.is_authenticated %}
             <li>Hi {{ request.user.username }}</li>
-            <li><a href="{% url "auth:logout" %}">Logout</a></li>
+            <li><a href="{% url "users:logout" %}">Logout</a></li>
         {% else %}
-            <li><a href="{% url "auth:login" %}">Login</a></li>
-            <li><a href="{% url "auth:signup" %}">Signup</a></li>
+            <li><a href="{% url "users:login" %}">Login</a></li>
+            <li><a href="{% url "users:signup" %}">Signup</a></li>
         {% endif %}
     </ul>    
 </header>
