--- a/fastube/users/templates/users/login.html
+++ b/fastube/users/templates/users/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<form action="{% url "auth:login" %}" method="POST">
+<form action="{% url "users:login" %}" method="POST">
     {% csrf_token %}
     <input type="text" name="username" placeholder="name" required>
     <input type="password" name="password" placeholder="password" required>
