--- a/fastube/users/templates/users/signup.html
+++ b/fastube/users/templates/users/signup.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>Signup</h1>
-<form action="{% url "auth:signup" %}" method="POST">
+<form action="{% url "users:signup" %}" method="POST">
     {% csrf_token %}
     <input type="text" name="username" placeholder="name" required>
     <input type="password" name="password" placeholder="password" required>
