--- a/fastube/posts/templates/posts/list.html
+++ b/fastube/posts/templates/posts/list.html
@@ -5,7 +5,7 @@
 {% block content %}
 <ul>
     {% for post in post_list %}
-    <li><a>{{ post.title }}</a></li>
+    <li><a href="{% url "posts:detail" post_id=post.id %}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
