--- a/fastube/posts/templates/posts/new.html
+++ b/fastube/posts/templates/posts/new.html
@@ -6,12 +6,19 @@
 <h2>{{ header|default:"NewPost" }}</h2>
 {% if video_id %}
     <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ video_id }}" frameborder="0" allowfullscreen></iframe> 
+    <img src="{{ youtube_thumbnail_image_url }}" alt="{{ title }}">
+    <a href="{{ youtube_original_url }}" target="_blank">유투브링크 바로가기</a>
 {% endif %}
-<form action="{{ action }}" method="POST">
+<form action="{{ action }}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <input type="text" name="video_id" value="{{ video_id }}" required>
     <input type="text" name="title" value="{{ title }}" required>
     <textarea name="content" >{{ content }}</textarea>
+
+    {% if video_id %}
+        <p>현재 썸네일 이미지가 마음에 안드시면 새로운 썸네일 이미지로 변경하실 수 있습니다.</p>
+        <input type="file" name="thumbnail_image">
+    {% endif %}
     <input type="submit">
 </form>
 {% endblock %}
